working and tested changes of solr 9.1