@@ -18,10 +18,11 @@
 package org.apache.solr.update.processor;
 
 import static org.apache.solr.update.processor.IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate;
-import static org.hamcrest.Matchers.containsString;
 
 import java.io.IOException;
 import java.nio.charset.Charset;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -30,8 +31,6 @@ import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.update.AddUpdateCommand;
-import org.apache.solr.util.LogListener;
-import org.hamcrest.MatcherAssert;
 import org.junit.Test;
 
 public class IgnoreLargeDocumentProcessorFactoryTest extends SolrTestCase {
@@ -55,30 +54,10 @@ public class IgnoreLargeDocumentProcessorFactoryTest extends SolrTestCase {
     requestProcessor.processAdd(getUpdate(1024));
   }
 
-  @Test
-  public void testProcessorInPermissiveMode() throws IOException {
-    NamedList<Object> args = new NamedList<>();
-    args.add(IgnoreLargeDocumentProcessorFactory.LIMIT_SIZE_PARAM, 1);
-    args.add(IgnoreLargeDocumentProcessorFactory.PERMISSIVE_MODE_PARAM, true);
-
-    IgnoreLargeDocumentProcessorFactory factory = new IgnoreLargeDocumentProcessorFactory();
-    factory.init(args);
-
-    UpdateRequestProcessor processor = factory.getInstance(null, null, null);
-    try (LogListener listener = LogListener.warn(IgnoreLargeDocumentProcessorFactory.class)) {
-      processor.processAdd(getUpdate(1024));
-
-      MatcherAssert.assertThat(
-          listener.pollMessage(),
-          containsString("Skipping doc because estimated size exceeds limit"));
-    }
-  }
-
-  public AddUpdateCommand getUpdate(int sizeBytes) {
+  public AddUpdateCommand getUpdate(int size) {
     SolrInputDocument document = new SolrInputDocument();
-    document.addField(new String(new byte[sizeBytes], Charset.defaultCharset()), 1L);
-    assertTrue(
-        IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document) > sizeBytes);
+    document.addField(new String(new byte[size], Charset.defaultCharset()), 1L);
+    assertTrue(IgnoreLargeDocumentProcessorFactory.ObjectSizeEstimator.estimate(document) > size);
 
     AddUpdateCommand cmd = new AddUpdateCommand(null);
     cmd.solrDoc = document;
@@ -89,9 +68,9 @@ public class IgnoreLargeDocumentProcessorFactoryTest extends SolrTestCase {
   public void testEstimateObjectSize() {
     assertEquals(estimate("abc"), 6);
     assertEquals(estimate("abcdefgh"), 16);
-    List<String> keys = List.of("int", "long", "double", "float", "str");
+    List<String> keys = Arrays.asList("int", "long", "double", "float", "str");
     assertEquals(estimate(keys), 42);
-    List<Object> values = List.of(12, 5L, 12.0, 5.0, "duck");
+    List<Object> values = Arrays.asList(12, 5L, 12.0, 5.0, "duck");
     assertEquals(estimate(values), 8);
 
     Map<String, Object> map = new HashMap<>();
@@ -123,9 +102,9 @@ public class IgnoreLargeDocumentProcessorFactoryTest extends SolrTestCase {
   public void testEstimateObjectSizeWithSingleChild() {
     assertEquals(estimate("abc"), 6);
     assertEquals(estimate("abcdefgh"), 16);
-    List<String> keys = List.of("int", "long", "double", "float", "str");
+    List<String> keys = Arrays.asList("int", "long", "double", "float", "str");
     assertEquals(estimate(keys), 42);
-    List<Object> values = List.of(12, 5L, 12.0, 5.0, "duck");
+    List<Object> values = Arrays.asList(12, 5L, 12.0, 5.0, "duck");
     assertEquals(estimate(values), 8);
     final String childDocKey = "testChildDoc";
 
@@ -164,9 +143,9 @@ public class IgnoreLargeDocumentProcessorFactoryTest extends SolrTestCase {
   public void testEstimateObjectSizeWithChildList() {
     assertEquals(estimate("abc"), 6);
     assertEquals(estimate("abcdefgh"), 16);
-    List<String> keys = List.of("int", "long", "double", "float", "str");
+    List<String> keys = Arrays.asList("int", "long", "double", "float", "str");
     assertEquals(estimate(keys), 42);
-    List<Object> values = List.of(12, 5L, 12.0, 5.0, "duck");
+    List<Object> values = Arrays.asList(12, 5L, 12.0, 5.0, "duck");
     assertEquals(estimate(values), 8);
     final String childDocKey = "testChildDoc";
 
@@ -192,7 +171,12 @@ public class IgnoreLargeDocumentProcessorFactoryTest extends SolrTestCase {
       childDocument.addField(entry.getKey(), entry.getValue());
     }
     List<SolrInputDocument> childList =
-        List.of(childDocument, new SolrInputDocument(childDocument));
+        new ArrayList<>() {
+          {
+            add(childDocument);
+            add(new SolrInputDocument(childDocument));
+          }
+        };
     document.addField(childDocKey, childList);
     mapWChild.put(childDocKey, childList);
     assertEquals(
